--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       </div>
 
       <h3>Online</h3>
-      <ul id="users"></ul>
+      <ul class="users" id="users"></ul>
     </aside>
 
     <main class="chat">
